force-app/main/default/objects/CRM_Tracker__c/CRM_Tracker__c.object-meta.xml
<CustomObject>
    <label>CRM Tracker</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Task Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRM Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>