force-app/main/default/objects/CRM_Tracker__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <label>Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>