force-app/main/default/objects/CRM_Tracker__c/fields/Issue_with_DocuSign__c.field-meta.xml
<CustomField>
    <fullName>Issue_with_DocuSign__c</fullName>
    <label>Issue with DocuSign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>