force-app/main/default/objects/CRM_Tracker__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <label>Task</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>