force-app/main/default/objects/CRM_Tracker__c/fields/Timestamp_Issue_Raised_by_CRM__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Issue_Raised_by_CRM__c</fullName>
    <label>Timestamp Issue Raised by CRM</label>
    <type>DateTime</type>
</CustomField>