force-app/main/default/objects/CRM_Tracker__c/fields/Timestamp_Issue_Resolved_by_IT__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Issue_Resolved_by_IT__c</fullName>
    <label>Timestamp Issue Resolved by IT</label>
    <type>DateTime</type>
</CustomField>