force-app/main/default/objects/CRM_Tracker__c/fields/Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit Number</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>CRM Tracker</relationshipLabel>
    <relationshipName>CRM_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>