force-app/main/default/objects/CRM_Tracker__c/recordTypes/CRM_Internal_Task.recordType-meta.xml
<RecordType>
    <fullName>CRM_Internal_Task</fullName>
    <active>true</active>
    <label>CRM Internal Task</label>
</RecordType>