force-app/main/default/objects/CRM_Tracker__c/recordTypes/IT_Task.recordType-meta.xml
<RecordType>
    <fullName>IT_Task</fullName>
    <active>false</active>
    <label>IT Task</label>
</RecordType>