force-app/main/default/objects/CRM_Tracker__c/recordTypes/SPA_Tracker.recordType-meta.xml
<RecordType>
    <fullName>SPA_Tracker</fullName>
    <active>true</active>
    <label>SPA Tracker</label>
</RecordType>