force-app/main/default/objects/CRM_Tracker__c/recordTypes/Stakeholders_task.recordType-meta.xml
<RecordType>
    <fullName>Stakeholders_task</fullName>
    <active>true</active>
    <label>Stakeholders task</label>
</RecordType>